Bug 675: Added spacing to advanced search buttons

--- a/themes/historickefondy3/less/historickefondy3.less
+++ b/themes/historickefondy3/less/historickefondy3.less
@@ -39,7 +39,13 @@ hr {
   padding: 0px;
 }
 
-//-------------------------
+//advanced search buttons spacing
+.btn-advsearch {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+//searchbox size increase
 @media (max-width: 767px) {
   .navbar-form {
     padding: 15px 15px;
